Add uplmn setting for USIM
Add preference "preferred network" in settings for USIM.
Add two activities for user to search and edit plmn.

Change-Id: Iaab46cd26f6c0e75439dc56409ddbc8e5ef57dff

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -524,4 +524,12 @@
     <string name="enable_video_calling_dialog_msg" msgid="6547569773866546434">"要开启视频通话功能，您需要在系统设置中启用增强型4G LTE模式。"</string>
     <string name="enable_video_calling_dialog_settings" msgid="576528473599603249">"网络设置"</string>
     <string name="enable_video_calling_dialog_close" msgid="7411471282167927991">"关闭"</string>
+
+    <!-- UPLMN Prefer -->
+    <string name="uplmn_list_setting_title">偏好设置</string>
+    <string name="network_id">网络 ID</string>
+    <string name="dialog_network_priority_title">优先级</string>
+    <string name="uplmn_list_setting_add_plmn">新增 PLMN</string>
+    <string name="gsm_umts_network_preferences_title">网络模式</string>
+    <string name="gsm_umts_network_preferences_dialogtitle">网络模式</string>
 </resources>
