--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -581,6 +581,8 @@
 
     <string name="gsm_umts_options">GSM/UMTS Options</string>
     <string name="cdma_options">CDMA Options</string>
+    <string name="network_settings_sel_sub">SUBS Settings</string>
+    <string name="summary_manage_subscriptions">Manage Network settings of each subscriptions</string>
 
     <!-- Screen option on the mobile network settings to go into data usage settings -->
     <string name="throttle_data_usage">Data usage</string>
@@ -824,6 +826,13 @@
     <!-- A menu item in "Mobile network settings" that allows the user to update the phone
          with mobile operator specific settings. [CHAR LIMIT=25] -->
     <string name="carrier_settings_title">Carrier settings</string>
+
+    <!-- Call Independent services screen title-->
+    <string name="call_ind_services">Call Independent Services</string>
+    <!-- button name for launching sub1, sub2 screen for Multi Sim Functionality-->
+    <string name="callind_multi_sim">SUBS Settings</string>
+    <!-- button name for direct launch of Call Feature screen for Single Sim Functionality -->
+    <string name="callind">Call Feature Settings</string>
 
     <!-- FDN settings strings -->
     <!-- Call settings screen, setting option name -->
