--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1476,4 +1476,47 @@
     <string name="uplmn_list_setting_add_plmn">New PLMN</string>
     <string name="gsm_umts_network_preferences_title">Network Mode</string>
     <string name="gsm_umts_network_preferences_dialogtitle">Network Mode</string>
+
+    <string name="sim_info">SIM card info</string>
+    <string name="close">Close</string>
+    <string name="change">Set</string>
+    <string name="new_sim_detected">New SIM card detected:</string>
+    <string name="default_sim_setting">Default SIM settings as:</string>
+    <string name="mobile_data">"Mobile Data: "</string>
+    <string name="slot">Slot</string>
+    <string name="carrier_name">(Carrier name)</string>
+    <string name="mobile_data_on">on</string>
+    <string name="mobile_data_off">off</string>
+    <string name="sim_unknown">Unknown</string>
+    <string name="sim_absent">Absent</string>
+    <string name="multi_sim_settings_title">Dual SIM settings</string>
+    <string name="lte_switch_unavailable">4G/3G SIM cards switcher is unavailable</string>
+    <string name="lte_recognize_summary">Two 4G/3G SIM cards are detected,you need to set the default 4G/3G SIM card:</string>
+    <string name="lte_select_summary">The selected subscription will be recognized as a 4G/3G card and the other one as a 2G card.</string>
+    <string name="lte_checkbox_text">Set mobile data to the selected SIM card once default 4G/3G SIM card is changed</string>
+    <string name="select_ok">OK</string>
+    <string name="lte_select_title">Default 4G/3G SIM card</string>
+    <string name="lte_recognition_title">SIM card recognition</string>
+    <string name="reg_failed">Registration failed</string>
+    <string name="reg_suc">Registration succeeded</string>
+    <string name="reg_failed_msg">Default 4G/3G SIM card registration failed, %1$s will be recognized as a 2G SIM card.</string>
+    <string name="lte_set">Set</string>
+    <string name="lte_setting">Default 4G/3G SIM card is being set</string>
+    <string name="select_continue">Continue</string>
+    <string name="select_cancel">Cancel</string>
+    <string-array name="origin_carrier_names" translateable="false">
+        <item>China Mobile</item>
+        <item>China Unicom</item>
+        <item>China Telecom</item>
+    </string-array>
+
+    <string-array name="locale_carrier_names" translatable="false">
+        <item>china_mobile</item>
+        <item>china_unicom</item>
+        <item>china_telecom</item>
+    </string-array>
+
+    <string name="china_mobile">China Mobile</string>
+    <string name="china_unicom">China Unicom</string>
+    <string name="china_telecom">China Telecom</string>
 </resources>
