Disable data in manual PLMN search
While doing manual PLMN search disable data if it is connected
once search done enable data connection.
Change-Id: I6da10deb2d71d7a696a84b4faab3414a26b5fa7f
CRs-Fixed: 604803

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1521,4 +1521,6 @@
     <string name="china_mobile">China Mobile</string>
     <string name="china_unicom">China Unicom</string>
     <string name="china_telecom">China Telecom</string>
+ <!-- Manual PLMN scan data disconnect dialog text -->
+    <string name="disconnect_data_confirm">Data service temporarily would be disconnected. Are you sure?</string>
 </resources>
