--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -156,21 +156,16 @@
     <string name="preferred_network_mode_lte_cdma_evdo_summary" msgid="228702246343742853">"首选网络模式：CDMA+LTE/EVDO"</string>
     <string name="preferred_network_mode_global_summary" msgid="1633134285545730364">"首选网络模式：通用"</string>
     <string name="preferred_network_mode_lte_wcdma_summary" msgid="9180775701594742750">"首选网络模式：LTE/WCDMA"</string>
-  <string-array name="preferred_network_mode_choices">
-    <item msgid="7886739962255042385">"LTE/WCDMA"</item>
-    <item msgid="577652050447385699">"LTE"</item>
-    <item msgid="6813597571293773656">"通用"</item>
-    <item msgid="127064712132619032">"GSM/WCDMA/LTE"</item>
-    <item msgid="1126767511633425977">"CDMA + LTE/EvDo"</item>
-    <item msgid="6389676313771670660">"CDMA/EvDo/GSM/WCDMA"</item>
-    <item msgid="545430093607698090">"仅 EvDo"</item>
-    <item msgid="1508557726283094448">"CDMA，无 EvDo 功能"</item>
-    <item msgid="4341433122263841224">"CDMA/EvDo 自动选择"</item>
-    <item msgid="5958053792390386668">"GSM/WCDMA 自动选择"</item>
-    <item msgid="7913148405605373434">"仅 WCDMA"</item>
-    <item msgid="1524224863879435516">"仅 GSM"</item>
-    <item msgid="3817924849415716259">"首选 GSM/WCDMA"</item>
-  </string-array>
+
+    <string name="preferred_network_mode_global_choice">"通用"</string>
+    <string name="preferred_network_mode_evdo_only_choice">"仅 EvDo"</string>
+    <string name="preferred_network_mode_cdma_wo_evdo_choice">"CDMA，无 EvDo 功能"</string>
+    <string name="preferred_network_mode_cdma_evdo_auto_choice">"CDMA/EvDo 自动选择"</string>
+    <string name="preferred_network_mode_gsm_wcdma_auto_choice">"GSM/WCDMA 自动选择"</string>
+    <string name="preferred_network_mode_wcdma_only_choice">"仅 WCDMA"</string>
+    <string name="preferred_network_mode_gsm_only_choice">"仅 GSM"</string>
+    <string name="preferred_network_mode_gsm_wcdma_preferred_choice">"首选 GSM/WCDMA"</string>
+
     <string name="data_enabled" msgid="5972538663568715366">"启用移动数据网络"</string>
     <!-- no translation found for data_enable_summary (2382798156640007971) -->
     <skip />
